Archive2/3b/fdfcbeedfef07c/output
main.cpp:65:41: error: use of undeclared identifier 'x'
    auto lambda = [] (auto y)  { return x + y; };
                                        ^
1 error generated.
